# auth-extension-sqlite

./: Cargo.toml  README.md
migrations/: 20250130231215_create_users_table.sql
src/: lib.rs
